--- a/insert_Restaurantes_Localidad/web/css/styles.css
+++ b/insert_Restaurantes_Localidad/web/css/styles.css
@@ -9,7 +9,7 @@ body, .navbar-light .navbar-toggler-icon, pre{background-color: #E5F6FE;}
 .dropdown-item:hover,  h1:hover, .fecha_inscripcion:hover{color: #212721; font-weight: bold;}
 .navbar-light .navbar-nav .nav-link {color: #006293!important; }
 .navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-toggler-icon {border-radius: 4px;}
+.navbar-light .navbar-toggler-icon {/*border-radius: 4px;*/}
 
 #contenido{
   background-image:url("../imagenes/fondos/fondo3.jpg"); background-size: cover;
