--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -6,10 +6,10 @@ header img{padding: 0px; height: 200px; }
 /* Navegación */
 body, .navbar-light .navbar-toggler-icon, pre{}
 /*.navbar-expand-lg .navbar-nav .dropdown-menu { position: absolute; margin-top: -0.7em;}*/
-.dropdown-item:hover,  h1:hover, .fecha_inscripcion:hover{color: #212721; font-weight: bold;}
+.dropdown-item:hover,  h1:hover, .fecha_inscripcion:hover{ font-weight: bold;}
 .navbar-light .navbar-nav .nav-link {color: #006293!important; }
 .navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-toggler-icon {border-radius: 4px;}
+.navbar-light .navbar-toggler-icon {/*border-radius: 4px;*/}
 
 #contenido{
  /* background-image:url("../imagenes/fondos/fondo3.jpg"); background-size: cover;*/
@@ -59,15 +59,17 @@ body, .navbar-light .navbar-toggler-icon, pre{}
 }
 
 
-@media only screen and (min-width: 1200px){
-  .navbar-light .navbar-nav .nav-link {margin-top: 2em; font-size: 1em; border-left: 1px solid #006293;}
+
+
+
+
+@media only screen and (min-width: 1000px) {
+  .navbar-light .navbar-nav .nav-link {margin-top: 2em; font-size: 1em; /*border-left: 1px solid #006293;*/}
+ 
 }
 
 
 
-@media only screen and (min-width: 1000px) and (max-width: 1200px) {
-  .navbar-light .navbar-nav .nav-link {margin-top: 2.6em; font-size: 0.8em; border-left: 1px solid #006293;}
-}
 
 @media only screen and (min-width: 992px) and (max-width: 999px) {
   /* Enlaces del toogle*/
@@ -181,3 +183,5 @@ label{font-size: 1em;}
 
 #copyright {background-color: #F8F8F8;}
 }
+
+h6{color:  #006293 ;}
