--- a/web/css/stylesmostrar.css
+++ b/web/css/stylesmostrar.css
@@ -1,5 +1,8 @@
 /*General*/
-label{/*font-weight: bolder; font-size: 1em;*/ color: #006293;} 
+h1{ text-decoration: underline; }
+h5{border-bottom: 1px solid #006293; text-align: left;}
+
+label, h1, h5{color: #006293;} 
 li{ list-style:none;} 
 
 /* Perfil Agencias y Cliente */
@@ -30,8 +33,6 @@ border: 2px solid #555;
 }
 
 
-h1{margin-bottom: 0.5em; text-decoration: underline; margin-top: 0.5em;}
-h5{color:#006293; border-bottom: 1px solid #006293; text-align: left;}
 
 
  /*MEDIAQUERYS*/
